fix(content-item-horizontal): fix media overflow on mobile

--- a/packages/styles/scss/components/content-item-horizontal-media/_content-item-horizontal-media.scss
+++ b/packages/styles/scss/components/content-item-horizontal-media/_content-item-horizontal-media.scss
@@ -164,7 +164,10 @@
     }
 
     ::slotted([slot='media']) {
-      grid-column: 1 / span 12;
+      grid-column: 1 / span 4;
+      @include carbon--breakpoint(lg) {
+        grid-column: 1 / span 12;
+      }
     }
     ::slotted(#{$dds-prefix}-image) {
       max-width: none;
